crates/generators/idl/tests/snapshots/idl_snapshot__module_only.snap
---
source: crates/generators/idl/tests/idl_snapshot.rs
expression: generated
---
// Module-only fixture that mirrors the Example module layout.
module Navigation {
    typedef long Heading;
};
