crates/generators/idl/tests/snapshots/idl_snapshot__struct_basic.snap
---
source: crates/generators/idl/tests/idl_snapshot.rs
expression: generated
---
// Struct fixture covering primitive members and array syntax.
struct Person {
    string name;
    long age;
    boolean isActive;
    string<16> codename;
    long readings[8];
};
